Created Dtabase. Worked well

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-c5d41f37-4632-4838-b0e8-2a0d53fe1b26;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "SalesWebMvcContext": "server=localhost;userid=developer;password=DeckBox7759;database=bancoteste"
+    }
 }
